--- a/vetflix/src/DogBreedList/style.css
+++ b/vetflix/src/DogBreedList/style.css
@@ -51,8 +51,8 @@ button:hover {
 }
 
 img {
-  max-width: 500px; /* Set the maximum width to 500 pixels */
-  max-height: 500px; /* Set the maximum height to 500 pixels */
+  max-width: 500px;
+  max-height: 500px;
 }
 
 .form-container {
